bbs minigame now has a power button to return to previous location

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/stylesheet.css
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/stylesheet.css
@@ -32,6 +32,17 @@ body {
     transform:rotateZ(3.5deg);
 }
 
+#powerButton {
+    position:absolute;
+    display:block;
+    margin:0; border:0; outline:0; padding:0;
+    top:0px; left:0px;
+    width:128px; height:128px; 
+    background:url(powerButton.png);
+    opacity:0.5;
+}
+#powerButton:hover { opacity:1; }
+
 pre { 
     display:none; 
 }
