--- a/HP Labs Main Twine and JS Projects/mcfunkypants/stylesheet.css
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/stylesheet.css
@@ -21,6 +21,13 @@ body {
     background-repeat:no-repeat;
     margin:0; padding:0; 
 }
+#hint {
+    position:absolute;
+    display:block;
+    top:400px; left:700px;
+    width:180px; height:180px;
+    background-image:url(hint.png); 
+}
 
 #monitor { 
     position:absolute;
